--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "cryptoapp",
   "version": "0.1.0",
+  "author": "Felipe Reis",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "daisyui": "^2.40.1",
+    "electron-builder": "^23.6.0",
+    "electron-store": "^8.1.0",
+    "path-browserify": "^1.0.1",
+    "vue": "^2.6.14",
+    "vue-router": "3",
+    "vue-select": "^3.20.0",
+    "vue-trading-view": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +31,14 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
